--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -35,11 +35,11 @@
 }
 
 h1 {
-  font-size: 3.125rem;
+  font-size: 1.75rem;
   color: var(--gray-900);
   font-weight: 500;
   line-height: 100%;
-  letter-spacing: -0.125rem;
+  letter-spacing: -0.05rem;
   margin: 0;
   font-family: "Inter Tight", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
@@ -195,4 +195,4 @@ main {
 .menu a { text-decoration: none; color: var(--gray-900); padding: 0.25rem 0.25rem; border-radius: 6px }
 .menu a.active { background: color-mix(in srgb, var(--pill-accent) 5%, transparent) }
 .menu-actions { margin-top: 1rem; display: flex; gap: 0.5rem; flex-wrap: wrap }
-.page { flex: 1; padding: 1rem }
+.page { flex: 1; padding: 0 }
