--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,11 +1,12 @@
 <section class="layout">
   <aside class="sidebar">
-    <h3 class="menu-title">{{ 'app.title' | i18n }}</h3>
     <nav class="menu">
-      <a [routerLink]="['/']" routerLinkActive="active">Home</a>
+      <a [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
       <a [routerLink]="['/alias']" routerLinkActive="active">Alias</a>
       <a [routerLink]="['/service']" routerLinkActive="active">Service</a>
       <a [routerLink]="['/todo']" routerLinkActive="active">Todo</a>
+      <a [routerLink]="['/login']" routerLinkActive="active">Login</a>
+      <a [routerLink]="['/table']" routerLinkActive="active">Table</a>
     </nav>
     <div class="menu-actions">
       <button class="pill" (click)="switch('zh')">{{ 'app.switchToZh' | i18n }}</button>
